--- a/lab7/index.html
+++ b/lab7/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="wrapper">
-      <div class="header">UMD Bus Routes</div>
+      <div class="header">UMD Bus Routes 150</div>
       <button class="button" onclick="loadData()">Load Some JSON</button>
       <div class="content"></div>
       <div class="footer"></div>
@@ -17,16 +17,31 @@
   </div>
   <script>
     function loadData() {
-      console.log('fetch'); // confirm code is running on click
       fetch('https://api.umd.io/v0/bus/routes')
         .then(res => res.json())
         .then(res => {
-          console.log(res); // logging step to check what we got
+          const route_names = res.map((i) => i.title);
+          const content = document.querySelector('.content');
+          content.innerHTML = '';
+          for(let i = 0; i < route_names.length; i ++){
+            let el = document.createElement("li");
+            el.innerText = route_names[i];
+            content.appendChild(el);
+          };
+          console.log(res);
           return res;
+
         })
-        .then(res => res.map(c =>c.title + " " + c.route_id))
-        .then(codes => document.querySelector(".content").innerText = data);
-    }
+        .then(data => {
+          const headers = document.querySelector(".header");
+          data = data.find(choose_id);
+          return headers.innerHTML = "UMD Bus Routes " + data.title;
+        });
+    };
+    function choose_id(routes){
+      return routes.route_id === '150'
+    }  
+    
   </script>
 </body>
 
